AI Q&A Chatbot.html

--- a/AI Q&A Chatbot.html
+++ b/AI Q&A Chatbot.html
@@ -312,7 +312,7 @@
                 let apiChatHistory = [];
                 apiChatHistory.push({ role: "user", parts: [{ text: prompt }] });
                 const payload = { contents: apiChatHistory };
-                const apiKey = "AIzaSyAdLzIqbZ--Wf9FMuEivqsTrkSQebgooWA";
+                const apiKey = "YOUR_API_KEY_HERE";
                 const apiUrl = `https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash-preview-05-20:generateContent?key=${apiKey}`;
 
                 let response;
@@ -494,4 +494,5 @@
 
     </script>
 </body>
+
 </html>
